# geohash_manager

./: .gitignore  pyproject.toml  pytest.ini  readme.md  setup.py
geohash_manager/: __init__.py  lagecy.py  main.py  sample.py
geohash_manager/model/: __init__.py  shape_model.py
geohash_manager/utils/: geo_utils.py
test/: conftest.py  conftext.py  test_function.py  test_model.py
