[tool.poetry]
name = "geohash_manager"
version = "0.2.0"
description = "very personally package for management geohash. rtree based."
authors = ["John Park <johnpark@johnssonslab.info>"]
readme = "readme.md"
packages = [{include = "geohash_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.1"
pydantic = "^2.1.1"
pygeohash = "^1.2.0"
rtree = "^1.0.1"
cartopy = "^0.22.0"
build = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
geopandas = "^0.13.2"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
